# project-fyr

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.analyzer  Makefile  README.md  architecture.md  deploy_assistant_design_part_2.md  deploy_assistant_design_part_3.md  pyproject.toml  verify_alerts.py
.github/workflows/: test.yml
helm/project-fyr/: Chart.yaml  values.yaml
helm/project-fyr/templates/: _helpers.tpl  analyzer-deployment.yaml  analyzer-service.yaml  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  dashboard-deployment.yaml  dashboard-ingress.yaml  dashboard-service.yaml  deployment.yaml  gitlab-deployment.yaml  gitlab-service.yaml  serviceaccount.yaml  servicemonitor.yaml  slack-mock-deployment.yaml  slack-mock-service.yaml
k8s/: dummy-fail.yaml  namespace-example.yaml  slack-mock.yaml  test-failing-app.yaml  test-scenarios.yaml  test-unschedulable-app.yaml
project_fyr/: __init__.py  agent.py  aggregator.py  analyzer.py  analyzer_service.py  config.py  context.py  dashboard.py  db.py  gitlab_api.py  models.py  prompts.py  reducer.py  service.py  slack.py  tools.py  triage.py  watcher_service.py  webhook.py
project_fyr/templates/: alert_detail.html  alerts.html  detail.html  index.html  investigate.html  overview.html
scripts/: inspect_db.py  run_local.sh
tests/: conftest.py  test_agent.py  test_analyzer.py  test_dashboard.py  test_dashboard_investigate.py  test_dashboard_overview.py  test_db_stats.py  test_service.py  test_stateful_alerts.py  test_tools.py  test_tools_extended.py  test_tools_extra.py  test_tools_gap_filling.py
