[project]
name = "project-fyr"
version = "0.1.0"
description = "Kubernetes-native deployment troubleshooting assistant"
requires-python = ">=3.9"
authors = [{name = "Project Fyr Team"}]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "kubernetes>=28.1.0",
    "langchain>=0.1.16",
    "langchain-openai>=0.0.8",
    "openai>=1.13",
    "slack_sdk>=3.27",
    "tenacity>=8.2",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.3",
    "httpx>=0.26.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["project_fyr"]
